Chinh sua header va footer

--- a/myshop/src/app/components/about/about.component.css
+++ b/myshop/src/app/components/about/about.component.css
@@ -1,6 +1,10 @@
 .footer {
-  border-top: 1px solid #ccc;
-  padding: 20px;
+  border-top: 60px solid #ccc;
+  padding: 0px;
   margin-top: 20px;
-  background-color: #C0C0C0;
+  background-color:#D3D3D3	;
+}
+.container{
+  height: 100%;
+  margin-left: 5%;
 }
