--- a/myshop/src/app/components/about/about.component.html
+++ b/myshop/src/app/components/about/about.component.html
@@ -1,31 +1,32 @@
- <footer id ="footer" class="footer">
-  <div class="container">
-    <div style="display: flex;">
-      <div class="col-md-3" >
-        <h3>ABOUT THE STORE</h3>
-        <p>Quan trọng hơn số lượng đó chính là cách các cửa hàng được tạo ra.
-        <br>RESMAN là thương hiệu ra đời tại Thành phố Hồ Chí Minh, Việt Nam, là thương hiệu thành công trong việc nhượng quyền BBQ Hàn Quốc tại Thành phố Hồ Chí Minh, và là thương hiệu không ngừng lớn mạnh bất chấp trong đại dịch COVID-19.</p>
-      </div>
-    <div class="col-md-3">
-      <div style="flex-grow: 1;">
-      <h3>ABOUT US</h3>
-      <p>Tại RESMAN, tất cả các quy trình từ thiết kế cửa hàng, đào tạo nhân viên, chuẩn bị món ăn đều là thủ công nên tất cả các khách hàng đều có thể nhận được dịch vụ như nhau tại tất cả các chi nhánh của RESMAN.
-      </p>
-    </div>
-  </div>
-    <div class="col-md-3 ">
-      <h3>ABOUT FUTURE</h3>
-      <p>RESMAN là một thương hiệu Hàn Quốc đang phát triển nhanh chóng, nắm bắt được hương vị món ăn, vẻ đẹp của từng không gian và luôn hướng đến tương lai chứ không vì lợi ích nhất thời mà đánh mất quy chuẩn đạo đức.</p>
-    </div>
-    <div class="col-md-3">
-      <h3>HIGH QUALITY,LOW PRICE</h3>
-      <p>HIGH QUALITY, LOW PRICE được tạo ra
-        bởi RESMAN…
-        <br>Không chỉ đơn giản là ăn thịt bình thường để no bụng.
-        Các bạn có thể thưởng thức thịt chất lượng cao đi
-        kèm với giá cả hợp lý.</p>
+<div id="banner" class="carousel-inner" role="listbox" style="border-top: 80px solid #ccc;">
+  <div class="carousel-item active">
+    <img src="assets/images/aboutus.jpg" alt="First slide"width="100%" height="50%" >
+    <div class="carousel-caption d-none d-md-block" style="color:black">
     </div>
   </div>
 </div>
-
-</footer>
+<div style="display: flex; background-color:#FFFFE8;" >
+  <div class="col-md-3" >
+    <h3>Về chúng tôi</h3>
+    <p>RESMAN là thương hiệu ra đời tại Thành phố Hồ Chí Minh, Việt Nam và đang trong giai đoạn định hình và phát triển.
+    <br></p>
+  </div>
+<div class="col-md-3">
+  <div style="flex-grow: 1;">
+  <h3>Nguyên liệu</h3>
+  <p>Resman luôn ưu tiên chọn các nguyên liệu tươi tốt nhất để phục vụ khách hàng.
+  </p>
+</div>
+</div>
+<div class="col-md-3">
+  <h3>Slogan</h3>
+  <p>với slogan HIGH QUALITY, LOW PRICE
+    <br>Mong muốn của Resman chính là đem lại trãi nghiệm tốt nhất cho khách hàng nhưng trong tầm giá tốt nhất có thể </p>
+</div>
+ <div class="col-md-3 ">
+  <h3>Liên hệ</h3>
+  <p><i class='bx bxl-facebook-circle' style="size: 30px;">Facebook</i>
+  <br><i class='bx bxl-instagram-alt' >Instagram</i>
+</p>
+</div>
+</div>
