--- a/myshop/src/app/components/menu/menu.component.html
+++ b/myshop/src/app/components/menu/menu.component.html
@@ -1,1 +1,240 @@
-<p>lo con cac</p>
+
+<div style="background-color: #ffd4d4; height: auto; width: auto;">
+<div id="carouselId" class="carousel slide" data-ride="carousel">
+  <div id="banner-1" class="carousel-inner" role="listbox">
+      <div class="carousel-item active">
+        <img src="assets/images/banner-1.jpg" alt="First slide"width="2000" height="600">
+        <div class="carousel-caption d-none d-md-block">
+          <a href="Contact" class="btn btn-danger">GO NOW!</a>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="assets/images/banner-2.jpg" alt="First slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Title</h3>
+          <p>Description</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="assets/images/banner-3.jpg" alt="First slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h3>Title</h3>
+          <p>Description</p>
+        </div>
+      </div>
+  </div>
+</div>
+<div class="product-sale my-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 col-md-6 sale-item">
+        <div class="item-content">
+          <img src="assets/images/sale-off/01.jpg" alt=""width="300" height="200">
+          <div class="caption">
+            <h4>50% OFF</h4>
+            <h3>Wegetables</h3>
+            <a href="" class="btn btn-danger">ORDER NOW</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-md-6 sale-item">
+        <div class="item-content">
+          <img src="assets/images/sale-off/02.jpg" alt=""width="300" height="200">
+          <div class="caption">
+            <h4>50% OFF</h4>
+            <h3>Wegetables</h3>
+            <a href="" class="btn btn-danger">ORDER NOW</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-md-6 sale-item">
+        <div class="item-content">
+          <img src="assets/images/sale-off/03.jpg" alt=""width="300" height="200">
+          <div class="caption">
+            <h4>50% OFF</h4>
+            <h3>Wegetables</h3>
+            <a href="" class="btn btn-danger">ORDER NOW</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-md-6 sale-item">
+        <div class="item-content">
+          <img src="assets/images/sale-off/04.jpg" alt=""width="300" height="200">
+          <div class="caption">
+            <h4>50% OFF</h4>
+            <h3>Wegetables</h3>
+            <a href="" class="btn btn-danger">ORDER NOW</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="product-new">
+  <div class="product-tilte text-center">
+    <h4>Products</h4>
+    <h2>Our new Product</h2>
+  </div>
+  <div class="container">
+    <div class="owl-carousel owl-theme owl-product">
+      <div class="product">
+        <div class="card text-center">
+          <img class="card-img-top" src="assets/images/hot/01.jpg" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Fish Curry</h4>
+            <p class="card-text price">$150</p>
+          </div>
+        </div>
+      </div>
+      <div class="product">
+        <div class="card text-center">
+          <img class="card-img-top" src="assets/images/hot/02.jpg" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Fish Curry</h4>
+            <p class="card-text price">$150</p>
+          </div>
+        </div>
+      </div>
+      <div class="product">
+        <div class="card text-center">
+          <img class="card-img-top" src="assets/images/hot/03.jpg" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Fish Curry</h4>
+            <p class="card-text price">$150</p>
+          </div>
+        </div>
+      </div>
+      <div class="product">
+        <div class="card text-center">
+          <img class="card-img-top" src="assets/images/hot/04.jpg" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Fish Curry</h4>
+            <p class="card-text price">$150</p>
+          </div>
+        </div>
+      </div>
+      <div class="product">
+        <div class="card text-center">
+          <img class="card-img-top" src="assets/images/hot/05.jpg" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Fish Curry</h4>
+            <p class="card-text price">$150</p>
+          </div>
+        </div>
+      </div>
+      <div class="product">
+        <div class="card text-center">
+          <img class="card-img-top" src="assets/images/hot/06.jpg" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Fish Curry</h4>
+            <p class="card-text price">$150</p>
+          </div>
+        </div>
+      </div>
+      <div class="product">
+        <div class="card text-center">
+          <img class="card-img-top" src="assets/images/hot/07.jpg" alt=""height="500">
+          <div class="card-body">
+            <h4 class="card-title">Fish Curry</h4>
+            <p class="card-text price">$150</p>
+          </div>
+        </div>
+      </div>
+      <div class="product">
+        <div class="card text-center">
+          <img class="card-img-top" src="assets/images/hot/08.jpg" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Fish Curry</h4>
+            <p class="card-text price">$150</p>
+          </div>
+        </div>
+      </div>
+
+
+
+    </div>
+  </div>
+</div>
+<div class="product-hot my-5">
+  <div class="container">
+    <div id="Products" class="product-tilte text-center">
+      <h4>Products</h4>
+      <h2>Our Hot Product</h2>
+    </div>
+    <div class="row">
+      <div class="col-md-3 col-md-6 hot item">
+          <div class="card text-center">
+                <img class="card-img-top" src="assets/images/hot/01.jpg" alt=""height="310">
+                <div class="card-body">
+                  <h4 class="card-title">Fish Curry</h4>
+                  <p class="card-text price">$150</p>
+                </div>
+          </div>
+      </div>
+      <div class="col-md-3 col-md-6 hot item">
+        <div class="card text-center">
+              <img class="card-img-top" src="assets/images/hot/02.jpg" alt=""height="310">
+              <div class="card-body">
+                <h4 class="card-title">Fish Curry</h4>
+                <p class="card-text price">$150</p>
+              </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-md-6 hot item">
+        <div class="card text-center">
+              <img class="card-img-top" src="assets/images/hot/03.jpg" alt=""height="310">
+              <div class="card-body">
+                <h4 class="card-title">Fish Curry</h4>
+                <p class="card-text price">$150</p>
+              </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-md-6 hot item">
+        <div class="card text-center">
+              <img class="card-img-top" src="assets/images/hot/04.jpg" alt=""height="310">
+              <div class="card-body">
+                <h4 class="card-title">Fish Curry</h4>
+                <p class="card-text price">$150</p>
+              </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-md-6 hot item">
+        <div class="card text-center">
+              <img class="card-img-top" src="assets/images/hot/05.jpg" alt=""height="310">
+              <div class="card-body">
+                <h4 class="card-title">Fish Curry</h4>
+                <p class="card-text price">$150</p>
+              </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-md-6 hot item">
+        <div class="card text-center">
+              <img class="card-img-top" src="assets/images/hot/06.jpg" alt=""height="310">
+              <div class="card-body">
+                <h4 class="card-title">Fish Curry</h4>
+                <p class="card-text price">$150</p>
+              </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-md-6 hot item">
+        <div class="card text-center">
+              <img class="card-img-top" src="assets/images/hot/07.jpg" alt=""height="310">
+              <div class="card-body">
+                <h4 class="card-title">Fish Curry</h4>
+                <p class="card-text price">$150</p>
+              </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-md-6 hot item">
+        <div class="card text-center">
+              <img class="card-img-top" src="assets/images/hot/08.jpg" alt=""height="310">
+              <div class="card-body">
+                <h4 class="card-title">Fish Curry</h4>
+                <p class="card-text price">$150</p>
+              </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
