--- a/myshop/src/app/components/about/about.component.html
+++ b/myshop/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<div id="banner" class="carousel-inner" role="listbox" style="border-top: 80px solid #ccc;">
+<div id="banner" class="carousel-inner" role="listbox" >
   <div class="carousel-item active">
     <img src="assets/images/aboutus.jpg" alt="First slide"width="100%" height="50%" >
     <div class="carousel-caption d-none d-md-block" style="color:black">
@@ -20,13 +20,12 @@
 </div>
 <div class="col-md-3">
   <h3>Slogan</h3>
-  <p>với slogan HIGH QUALITY, LOW PRICE
-    <br>Mong muốn của Resman chính là đem lại trãi nghiệm tốt nhất cho khách hàng nhưng trong tầm giá tốt nhất có thể </p>
+  <p>Với slogan HIGH QUALITY, LOW PRICE Mong muốn của Resman chính là đem lại trãi nghiệm tốt nhất cho khách hàng nhưng trong tầm giá tốt nhất có thể </p>
 </div>
  <div class="col-md-3 ">
   <h3>Liên hệ</h3>
-  <p><i class='bx bxl-facebook-circle' style="size: 30px;">Facebook</i>
-  <br><i class='bx bxl-instagram-alt' >Instagram</i>
+  <p><i class='bx bxl-facebook-circle' style="size: 30px; margin-left: 5px;">Facebook</i>
+  <br><i class='bx bxl-instagram-alt' style="size: 30px; margin-left: 5px;">Instagram</i>
 </p>
 </div>
 </div>
