--- a/myshop/src/app/components/header/header.component.html
+++ b/myshop/src/app/components/header/header.component.html
@@ -4,34 +4,39 @@
       <link rel="stylesheet" type="text/css" href="./header.component.css">
    </head>
    <body>
-    <nav class="navbar navbar-dark navbar-expand-md bg-dark fixed-top jusitfy-content">
-      <div class="container" >
-        <a id="logo" href="Home" class="logo"><img src="./assets/images/logo.jpg" alt=""[style.width]="'50px'" [style.height]="'50px'"></a>
-        <a href="Home" class="navbar-brand mr-0" >RESMAN</a>
-        <button class="navbar-toggler ml-1" type="button" data-toggle="collapse">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse collapse jusitfy-content-between algin-items-center"
-          id="collapsingNavbar2">
-          <ul class="navbar-nav mx-auto text-center">
-            <li class="nav-item active c">
-              <a class="nav-link"href="Home"><i class="fas fa-user">Trang chủ</i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="Menu"><i class="fas fa-user">Thực đơn</i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link"href="Contact"><i class="fas fa-user">Đặt bàn</i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link"href="About"><i class="fas fa-user">Về chúng tôi </i></a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0 search-form">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search"><a href="Menu" class="btn btn-danger" style="margin-right:5px ; width: 100px; height: 50 px; text-align: center; color: white;">Tìm kiếm</a>
-          </form>
-        </div>
-      </div>
-    </nav>
+
+           <nav class="mb-4 navbar navbar-expand-lg navbar-light pink lighten-4">
+            <!-- Navbar brand -->
+            <a id="logo" href="Home" class="logo"><img src="./assets/images/logo.jpg" alt=""[style.width]="'60px'" [style.height]="'70px'" style="margin-left: 5px;"></a>
+            <a class="navbar-brand font-bold" href="Home" style="margin-left: 10px; margin-top: 15px;">Resman</a>
+
+            <!-- Collapse button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <!-- Collapsible content -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <!-- Links -->
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item ">
+                        <a class="nav-link font-bold" href="Home">Trang chủ </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link font-bold" href="Menu">Thực đơn</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link font-bold" href="About">Về chúng tôi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link font-bold" href="Contact">Đặt bàn</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link font-bold" href="Login">Đăng nhập</a>
+                  </li>
+                </ul>
+                <!-- Links -->
+                <!-- Search form -->
+
+            </div>
+            <!-- Collapsible content -->
+        </nav>
     </body>
 </html>
