--- a/myshop/src/app/components/home/home.component.html
+++ b/myshop/src/app/components/home/home.component.html
@@ -1,11 +1,9 @@
-
-   <div id="banner" class="carousel-inner" role="listbox" style="border-top: 80px solid #ccc;">
+   <div id="banner" class="carousel-inner" role="listbox">
       <div class="carousel-item active">
         <img src="assets/images/banner1.gif" alt="First slide"width="100%" height="50%" >
         <div class="carousel-caption d-none d-md-block">
           <a href="Contact" class="btn btn-danger" style="margin-right:575px ; width: 170px; height: 55 px; text-align: center; color: white;">GO NOW!</a>
         </div>
-
         <div class="carousel-caption d-none d-md-block" style="color:black">
         </div>
       </div>
