--- a/myshop/src/app/components/menu/menu.component.html
+++ b/myshop/src/app/components/menu/menu.component.html
@@ -32,7 +32,7 @@
           <img src="assets/images/sale-off/01.jpg" alt=""width="300" height="200">
           <div class="caption">
             <h4>50% OFF</h4>
-            <h3>Wegetables</h3>
+            <h3>ơm Chiên Hàn Quốc Xào Nấm</h3>
             <a href="" class="btn btn-danger">ORDER NOW</a>
           </div>
         </div>
@@ -42,7 +42,7 @@
           <img src="assets/images/sale-off/02.jpg" alt=""width="300" height="200">
           <div class="caption">
             <h4>50% OFF</h4>
-            <h3>Wegetables</h3>
+            <h3>Gà Sốt Cay Hàn Quốc</h3>
             <a href="" class="btn btn-danger">ORDER NOW</a>
           </div>
         </div>
@@ -52,7 +52,7 @@
           <img src="assets/images/sale-off/03.jpg" alt=""width="300" height="200">
           <div class="caption">
             <h4>50% OFF</h4>
-            <h3>Wegetables</h3>
+            <h3>Combo Kimbap và Súp Đẩu Hủ</h3>
             <a href="" class="btn btn-danger">ORDER NOW</a>
           </div>
         </div>
@@ -62,7 +62,51 @@
           <img src="assets/images/sale-off/04.jpg" alt=""width="300" height="200">
           <div class="caption">
             <h4>50% OFF</h4>
-            <h3>Wegetables</h3>
+            <h3>Kimbap Basic</h3>
+            <a href="" class="btn btn-danger">ORDER NOW</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-md-6 sale-item">
+        <div class="item-content">
+          <img src="assets/images/sale-off/05.jpg" alt=""width="300" height="200">
+          <div class="caption">
+            <h4>50% OFF</h4>
+            <h3>Gỏi Cuốn</h3>
+            <a href="" class="btn btn-danger">ORDER NOW</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-md-6 sale-item">
+        <div class="item-content">
+          <img src="assets/images/sale-off/06.jpg" alt=""width="300" height="200">
+          <div class="caption">
+            <h4>50% OFF</h4>
+            <h3>Cơm Chiên Dương Châu</h3>
+            <a href="" class="btn btn-danger">ORDER NOW</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-md-6 sale-item">
+        <div class="item-content">
+          <img src="assets/images/sale-off/07.jpg" alt=""width="300" height="200">
+          <div class="caption">
+            <h4>50% OFF</h4>
+            <h3>Bánh Khọt</h3>
+            <a href="" class="btn btn-danger">ORDER NOW</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-md-6 sale-item">
+        <div class="item-content">
+          <img src="assets/images/sale-off/08.jpg" alt=""width="300" height="200">
+          <div class="caption">
+            <h4>50% OFF</h4>
+            <h3>Súp Cua Hải Sản</h3>
             <a href="" class="btn btn-danger">ORDER NOW</a>
           </div>
         </div>
@@ -82,7 +126,7 @@
           <img class="card-img-top" src="assets/images/hot/01.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Fish Curry</h4>
-            <p class="card-text price">$150</p>
+            <p class="card-text price">150.000 VNĐ</p>
           </div>
         </div>
       </div>
@@ -91,7 +135,7 @@
           <img class="card-img-top" src="assets/images/hot/02.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Fish Curry</h4>
-            <p class="card-text price">$150</p>
+            <p class="card-text price">150.000 VNĐ</p>
           </div>
         </div>
       </div>
@@ -100,7 +144,7 @@
           <img class="card-img-top" src="assets/images/hot/03.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Fish Curry</h4>
-            <p class="card-text price">$150</p>
+            <p class="card-text price">150.000 VNĐ</p>
           </div>
         </div>
       </div>
@@ -109,7 +153,7 @@
           <img class="card-img-top" src="assets/images/hot/04.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Fish Curry</h4>
-            <p class="card-text price">$150</p>
+            <p class="card-text price">150.000 VNĐ</p>
           </div>
         </div>
       </div>
@@ -118,7 +162,7 @@
           <img class="card-img-top" src="assets/images/hot/05.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Fish Curry</h4>
-            <p class="card-text price">$150</p>
+            <p class="card-text price">150.000 VNĐ</p>
           </div>
         </div>
       </div>
@@ -127,7 +171,7 @@
           <img class="card-img-top" src="assets/images/hot/06.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Fish Curry</h4>
-            <p class="card-text price">$150</p>
+            <p class="card-text price">150.000 VNĐ</p>
           </div>
         </div>
       </div>
@@ -136,7 +180,7 @@
           <img class="card-img-top" src="assets/images/hot/07.jpg" alt=""height="500">
           <div class="card-body">
             <h4 class="card-title">Fish Curry</h4>
-            <p class="card-text price">$150</p>
+            <p class="card-text price">150.000 VNĐ</p>
           </div>
         </div>
       </div>
@@ -145,7 +189,7 @@
           <img class="card-img-top" src="assets/images/hot/08.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Fish Curry</h4>
-            <p class="card-text price">$150</p>
+            <p class="card-text price">150.000 VNĐ</p>
           </div>
         </div>
       </div>
@@ -191,18 +235,18 @@
       </div>
       <div class="col-md-3 col-md-6 hot item">
         <div class="card text-center">
-              <img class="card-img-top" src="assets/images/hot/04.jpg" alt=""height="310">
+              <img class="card-img-top" src="assets/images/hot/09.jpg" alt=""height="310">
               <div class="card-body">
-                <h4 class="card-title">Fish Curry</h4>
+                <h4 class="card-title">Súp Cua Hải Sản</h4>
                 <p class="card-text price">$150</p>
               </div>
         </div>
       </div>
       <div class="col-md-3 col-md-6 hot item">
         <div class="card text-center">
-              <img class="card-img-top" src="assets/images/hot/05.jpg" alt=""height="310">
+              <img class="card-img-top" src="assets/images/hot/10.jpg" alt=""height="310">
               <div class="card-body">
-                <h4 class="card-title">Fish Curry</h4>
+                <h4 class="card-title">Cơm Chiên Dương Châu</h4>
                 <p class="card-text price">$150</p>
               </div>
         </div>
@@ -211,7 +255,7 @@
         <div class="card text-center">
               <img class="card-img-top" src="assets/images/hot/06.jpg" alt=""height="310">
               <div class="card-body">
-                <h4 class="card-title">Fish Curry</h4>
+                <h4 class="card-title">Cơm Xào Bò Hàn Quốc</h4>
                 <p class="card-text price">$150</p>
               </div>
         </div>
@@ -220,7 +264,7 @@
         <div class="card text-center">
               <img class="card-img-top" src="assets/images/hot/07.jpg" alt=""height="310">
               <div class="card-body">
-                <h4 class="card-title">Fish Curry</h4>
+                <h4 class="card-title">Mì Xào Tokbokki Hàn Quốc</h4>
                 <p class="card-text price">$150</p>
               </div>
         </div>
@@ -229,7 +273,7 @@
         <div class="card text-center">
               <img class="card-img-top" src="assets/images/hot/08.jpg" alt=""height="310">
               <div class="card-body">
-                <h4 class="card-title">Fish Curry</h4>
+                <h4 class="card-title">Gà Sốt Cay Hàn Quốc</h4>
                 <p class="card-text price">$150</p>
               </div>
         </div>
