--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -32,7 +32,7 @@
           <img src="assets/images/sale-off/01.jpg" alt=""width="300" height="200">
           <div class="caption">
             <h4>50% OFF</h4>
-            <h3>ơm Chiên Hàn Quốc Xào Nấm</h3>
+            <h3>Cơm Chiên Hàn Quốc Xào Nấm</h3>
             <a href="" class="btn btn-danger">ORDER NOW</a>
           </div>
         </div>
@@ -125,8 +125,8 @@
         <div class="card text-center">
           <img class="card-img-top" src="assets/images/hot/01.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Fish Curry</h4>
-            <p class="card-text price">150.000 VNĐ</p>
+            <h4 class="card-title">Tokbokki Trứng Sốt Cay Hàn Quốc</h4>
+            <p class="card-text price">65.000 VNĐ</p>
           </div>
         </div>
       </div>
@@ -134,8 +134,8 @@
         <div class="card text-center">
           <img class="card-img-top" src="assets/images/hot/02.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Fish Curry</h4>
-            <p class="card-text price">150.000 VNĐ</p>
+            <h4 class="card-title">Thịt bò xông khói Hàn Quốc</h4>
+            <p class="card-text price">450.000 VNĐ</p>
           </div>
         </div>
       </div>
@@ -152,8 +152,8 @@
         <div class="card text-center">
           <img class="card-img-top" src="assets/images/hot/04.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Fish Curry</h4>
-            <p class="card-text price">150.000 VNĐ</p>
+            <h4 class="card-title">Kimbap Basic</h4>
+            <p class="card-text price">55.000 VNĐ</p>
           </div>
         </div>
       </div>
@@ -161,8 +161,8 @@
         <div class="card text-center">
           <img class="card-img-top" src="assets/images/hot/05.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Fish Curry</h4>
-            <p class="card-text price">150.000 VNĐ</p>
+            <h4 class="card-title">Cơm Chiên Hàn Quốc Xào Nấm</h4>
+            <p class="card-text price">70.000 VNĐ</p>
           </div>
         </div>
       </div>
@@ -170,8 +170,8 @@
         <div class="card text-center">
           <img class="card-img-top" src="assets/images/hot/06.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Fish Curry</h4>
-            <p class="card-text price">150.000 VNĐ</p>
+            <h4 class="card-title">Cơm Xào Bò Hàn Quốc</h4>
+            <p class="card-text price">65.000 VNĐ</p>
           </div>
         </div>
       </div>
@@ -179,8 +179,8 @@
         <div class="card text-center">
           <img class="card-img-top" src="assets/images/hot/07.jpg" alt=""height="500">
           <div class="card-body">
-            <h4 class="card-title">Fish Curry</h4>
-            <p class="card-text price">150.000 VNĐ</p>
+            <h4 class="card-title">Mì Xào Tokbokki Hàn Quốc</h4>
+            <p class="card-text price">70.000 VNĐ</p>
           </div>
         </div>
       </div>
@@ -188,8 +188,8 @@
         <div class="card text-center">
           <img class="card-img-top" src="assets/images/hot/08.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Fish Curry</h4>
-            <p class="card-text price">150.000 VNĐ</p>
+            <h4 class="card-title">Gà Sốt Cay Hàn Quốc</h4>
+            <p class="card-text price">250.000 VNĐ</p>
           </div>
         </div>
       </div>
@@ -210,8 +210,8 @@
           <div class="card text-center">
                 <img class="card-img-top" src="assets/images/hot/01.jpg" alt=""height="310">
                 <div class="card-body">
-                  <h4 class="card-title">Fish Curry</h4>
-                  <p class="card-text price">$150</p>
+                  <h4 class="card-title">Tokbokki Trứng Sốt Cay Hàn Quốc</h4>
+                  <p class="card-text price">65.000 VNĐ</p>
                 </div>
           </div>
       </div>
@@ -219,8 +219,8 @@
         <div class="card text-center">
               <img class="card-img-top" src="assets/images/hot/02.jpg" alt=""height="310">
               <div class="card-body">
-                <h4 class="card-title">Fish Curry</h4>
-                <p class="card-text price">$150</p>
+                <h4 class="card-title">Thịt bò xông khói Hàn Quốc</h4>
+                <p class="card-text price">450.000 VNĐ</p>
               </div>
         </div>
       </div>
@@ -228,8 +228,8 @@
         <div class="card text-center">
               <img class="card-img-top" src="assets/images/hot/03.jpg" alt=""height="310">
               <div class="card-body">
-                <h4 class="card-title">Fish Curry</h4>
-                <p class="card-text price">$150</p>
+                <h4 class="card-title">Combo Kimbap và Súp Đẩu Hủ</h4>
+                <p class="card-text price">75.000 VNĐ</p>
               </div>
         </div>
       </div>
@@ -238,7 +238,7 @@
               <img class="card-img-top" src="assets/images/hot/09.jpg" alt=""height="310">
               <div class="card-body">
                 <h4 class="card-title">Súp Cua Hải Sản</h4>
-                <p class="card-text price">$150</p>
+                <p class="card-text price">45.000 VNĐ</p>
               </div>
         </div>
       </div>
@@ -247,7 +247,7 @@
               <img class="card-img-top" src="assets/images/hot/10.jpg" alt=""height="310">
               <div class="card-body">
                 <h4 class="card-title">Cơm Chiên Dương Châu</h4>
-                <p class="card-text price">$150</p>
+                <p class="card-text price">50.000 VNĐ</p>
               </div>
         </div>
       </div>
@@ -256,7 +256,7 @@
               <img class="card-img-top" src="assets/images/hot/06.jpg" alt=""height="310">
               <div class="card-body">
                 <h4 class="card-title">Cơm Xào Bò Hàn Quốc</h4>
-                <p class="card-text price">$150</p>
+                <p class="card-text price">65.000 VNĐ</p>
               </div>
         </div>
       </div>
@@ -265,7 +265,7 @@
               <img class="card-img-top" src="assets/images/hot/07.jpg" alt=""height="310">
               <div class="card-body">
                 <h4 class="card-title">Mì Xào Tokbokki Hàn Quốc</h4>
-                <p class="card-text price">$150</p>
+                <p class="card-text price">70.000 VNĐ</p>
               </div>
         </div>
       </div>
@@ -274,7 +274,7 @@
               <img class="card-img-top" src="assets/images/hot/08.jpg" alt=""height="310">
               <div class="card-body">
                 <h4 class="card-title">Gà Sốt Cay Hàn Quốc</h4>
-                <p class="card-text price">$150</p>
+                <p class="card-text price">250.000 VNĐ</p>
               </div>
         </div>
       </div>
