--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -5,27 +5,35 @@
     </div>
   </div>
 </div>
-<div style="display: flex; background-color:#FFFFE8;" >
-  <div class="col-md-3" >
+<div style="display: flex; background-color:#FFFFE8; " >
+  <div class="col-md-2" style="text-align: left;" style="margin-right: 100px;">
     <h3>Về chúng tôi</h3>
     <p>RESMAN là thương hiệu ra đời tại Thành phố Hồ Chí Minh, Việt Nam và đang trong giai đoạn định hình và phát triển.
     <br></p>
   </div>
-<div class="col-md-3">
+<div class="col-md-2"style="text-align: left;" style="margin-right: 100px;">
   <div style="flex-grow: 1;">
   <h3>Nguyên liệu</h3>
   <p>Resman luôn ưu tiên chọn các nguyên liệu tươi tốt nhất để phục vụ khách hàng.
   </p>
 </div>
 </div>
-<div class="col-md-3">
+<div class="col-md-2" style="text-align: left;"style="margin-right: 100px;">
   <h3>Slogan</h3>
   <p>Với slogan HIGH QUALITY, LOW PRICE Mong muốn của Resman chính là đem lại trãi nghiệm tốt nhất cho khách hàng nhưng trong tầm giá tốt nhất có thể </p>
 </div>
- <div class="col-md-3 ">
+ <div class="col-md-2 "style="text-align: left;"style="margin-right: 0px;" >
   <h3>Liên hệ</h3>
-  <p><i class='bx bxl-facebook-circle' style="size: 30px; margin-left: 5px;">Facebook</i>
-  <br><i class='bx bxl-instagram-alt' style="size: 30px; margin-left: 5px;">Instagram</i>
+  <p><i class='bx bxl-facebook-circle' style="size: 30px; margin-left: 5px;">Facebook: Facebook.com/Resman</i>
+  <br><i class='bx bxl-instagram-alt' style="size: 30px; margin-left: 5px;">Instagram: Resman.hf365</i>
 </p>
+</div>
+
+<div class="col-md-2" style="text-align: left;" style="margin-right: 10px;">
+  <div style="flex-grow: 1;">
+  <h3>Thông tin liên lạc</h3>
+  <p>SĐT: +84 999 999 999 <br>Giờ hoạt động từ 8:00am - 21:30pm
+  <br>Địa chỉ: Đường Trường sa, Số 365, Q3, TPHCM</p>
+</div>
 </div>
 </div>
