edit login signin, background 4 addmon, chưa tạo background cho footer

--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -1,15 +1,16 @@
 <!-- Pills navs -->
+
 <div class="card text-center" style="width: 500px;">
   <div class="card-header h5 text-white bg-primary">Đăng ký</div>
   <div class="card-body px-5">
 <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
   <li class="nav-item" role="presentation">
     <a class="nav-link" id="tab-login" data-mdb-toggle="pill" href="Login" role="tab"
-      aria-controls="pills-login" aria-selected="true">Login</a>
+      aria-controls="pills-login" aria-selected="true">Đăng nhập</a>
   </li>
   <li class="nav-item" role="presentation">
     <a class="nav-link active" id="tab-register" data-mdb-toggle="pill" href="Signin" role="tab"
-      aria-controls="pills-register" aria-selected="false">Register</a>
+      aria-controls="pills-register" aria-selected="false">Đăng ký</a>
   </li>
 </ul>
 <div class="tab-content">
@@ -18,13 +19,13 @@
     <!-- Name input -->
     <div class="form-outline mb-4">
       <input type="text" id="registerName" class="form-control" />
-      <label class="form-label" for="registerName">Name</label>
+      <label class="form-label" for="registerName">Tên</label>
     </div>
 
     <!-- Username input -->
     <div class="form-outline mb-4">
       <input type="text" id="registerUsername" class="form-control" />
-      <label class="form-label" for="registerUsername">Username</label>
+      <label class="form-label" for="registerUsername">Tên tài khoản</label>
     </div>
 
     <!-- Email input -->
@@ -36,13 +37,13 @@
     <!-- Password input -->
     <div class="form-outline mb-4">
       <input type="password" id="registerPassword" class="form-control" />
-      <label class="form-label" for="registerPassword">Password</label>
+      <label class="form-label" for="registerPassword">Mật khẩu</label>
     </div>
 
     <!-- Repeat Password input -->
     <div class="form-outline mb-4">
       <input type="password" id="registerRepeatPassword" class="form-control" />
-      <label class="form-label" for="registerRepeatPassword">Repeat password</label>
+      <label class="form-label" for="registerRepeatPassword">Nhập lại mật khẩu</label>
     </div>
 
     <!-- Checkbox -->
@@ -50,7 +51,7 @@
       <input class="form-check-input me-2" type="checkbox" value="" id="registerCheck" checked
         aria-describedby="registerCheckHelpText" />
       <label class="form-check-label" for="registerCheck">
-        I have read and agree to the terms
+        Tôi đã đọc kĩ điều khoản
       </label>
     </div>
 
