--- a/src/app/components/addmon/addmon.component.html
+++ b/src/app/components/addmon/addmon.component.html
@@ -1,38 +1,36 @@
-<form action="/wpcf7-f197-p4-o2" method="post" class="wpcf7-form invalid"novalidate="novalidate">
+<!-- Pills navs -->
 
+<div class="card text-center" style="width: 500px;">
+  <div class="card-body px-5">
+<ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
+</ul>
+<div class="tab-content">
+  <form>
+    <!-- Name input -->
+    <div class="form-outline mb-4">
+      <input type="text" id="Name" class="form-control" placeholder="Tên món ăn" />
 
-          <span class="wpcf7-form-control-wrap text-800">
-            <input type="text" name="text-800" value size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required wpcf7-not-valid" aria-required="true" aria-invalid="true" placeholder="Tên món ăn">
-            <span role="alert" class="wpcf7-not-valid-tip">
+    </div>
 
-            </span>
-          </span>
-          <br>
+    <!-- Username input -->
+    <div class="form-outline mb-4">
+      <input type="text" id="price" class="form-control" placeholder="Giá tiền" />
+    </div>
 
-          <span class="wpcf7-form-control-wrap tel-364">
-            <input type="tel" name="tel-364" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-required wpcf7-validates-as-tel wpcf7-not-valid" aria-required="true" aria-invalid="true" placeholder="Gía tiền">
-            <span role="alert" class="wpcf7-not-valid-tip">
+    <!-- Email input -->
+    <div class="form-outline mb-4">
+      <input type="email" id="loai" class="form-control" placeholder="Loại món ăn" />
+    </div>
 
-            </span>
-          </span>
-          <br>
+    <!-- Password input -->
+    <div class="form-outline mb-4">
+      <input type="file" id="image" class="form-control" placeholder="Hình ảnh" />
+    </div>
+    <!-- Submit button -->
+    <button type="submit" class="btn btn-primary btn-block mb-3">thêm món ăn </button>
+  </form>
+</div>
+</div>
+</div>
 
-          <span class="wpcf7-form-control-wrap number-992">
-            <input type="number" name="number-992" value="" class="wpcf7-form-control wpcf7-number wpcf7-validates-as-required wpcf7-validates-as-number wpcf7-not-valid" min="1" max="30" aria-required="true" aria-invalid="true" placeholder="Loại món ăn ">
-            <span role="alert" class="wpcf7-not-valid-tip">
-
-            </span>
-          </span>
-          <br>
-
-          <span class="wpcf7-form-control-wrap text-800">
-            <input type="text" name="text-800" value size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required wpcf7-not-valid" aria-required="true" aria-invalid="true" placeholder="Mô tả món ăn">
-            <span role="alert" class="wpcf7-not-valid-tip">
-            </span>
-          </span>
-          <br>
-          <br>
-          <input type="submit" value="Thêm món" class="wpcf7-form-control wpcf7-submit">
-          <span class="ajax-loader"></span>
-
-        </form>
+<!-- Pills content -->
