--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -1,3 +1,4 @@
+
 .section {
   padding: 10px 120px;
   position: relative;
@@ -6,23 +7,25 @@
   display: flex;
   flex-flow: row;
   align-items: center;
-  background-color: #ffd4d4;
-
+  height: 100%;
 }
 
 *:before, *::after{
  box-sizing: border-box;
+ height: 100%;
 }
 
 
 .bg-loaded {
   opacity: 1;
+  height: 100%;
 }
 
 .bg {
   opacity: 0;
   transition: opacity 1s;
   -webkit-transition: opacity 1s;
+  height: 100%;
 }
 
 
@@ -35,10 +38,12 @@
   bottom: 0;
   padding: 0 !important;
   margin: 0 !important;
+  height: 100%;
 }
 
 .section-bg, .section-content {
   width: 50%;
+  height: 100%;
 }
 
 .section-bg {
@@ -47,14 +52,17 @@
 
 div {
   display: block;
+  height: 100%;
 }
 
 body {
   font-family: "Roboto", sans-serif;
+  height: 100%;
 }
 
 body {
   line-height: 1.6%;
+  height: 100%;
 }
 
 body {
@@ -62,6 +70,7 @@ body {
   scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
 }
 
 /* relative-bg  */
