--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section class="section dangky" id="section_1041469145">
+<section class="section dangky" id="section_1041469145" style="background-image: url(assets/images/res.png); background-size: cover;">
   <div class="bg section-bg fill bg-fill bg-loaded">
     <div class="section-bg-overlay absolute fill"></div>
   </div>
@@ -7,37 +7,39 @@
     <div class="col medium-6 small-12 large-6">
       <div class="col-inner dark">
         <h3 class="alt-font">
-          <span style="font-size: 130%; color: #000000"> Set Table</span>
+          <span style="font-size: 130%; color: aqua"> Đặt bàn</span>
         </h3>
         <p>
-          <span style="font-size: 95%">
-            "Qúy khách vui lòng đặt bàn trước để có trải nghiệm thưởng thức ẩm thực tốt nhất tại RESMAN"
+          <span style="font-size: 95%; color:blue;">
+            "Quý khách vui lòng đặt bàn trước để có trải nghiệm thưởng thức ẩm thực tốt nhất tại RESMAN"
           </span>
         </p>
         <p>
-          <span style="color:#000000;font-size: 100%;">
+          <span style="color:aqua;font-size: 100%;">
             Gợi ý đặt bàn:
           </span>
+
         </p>
         <ul>
+
           <li class="bullet-arrow">
-            <span style="font-size: 95%;">Đi 1 người: đặt bàn đơn
+            <span style="font-size: 95%;color:aqua;">Đi 1 người: đặt bàn đơn
             </span>
           </li>
           <li class="bullet-arrow">
-            <span style="font-size: 95%;">Đi 2 người: đặt bàn đôi
+            <span style="font-size: 95%;color:aqua;">Đi 2 người: đặt bàn đôi
             </span>
           </li>
           <li class="bullet-arrow">
-            <span style="font-size: 95%;">Đi nhóm 4-6 người: đặt bàn 6 người.
+            <span style="font-size: 95%;color:aqua;">Đi nhóm 4-6 người: đặt bàn 6 người.
             </span>
           </li>
           <li class="bullet-arrow">
-            <span style="font-size: 95%;">Đi nhóm 6-12 người: đặt bàn dài.
+            <span style="font-size: 95%;color:aqua;">Đi nhóm 6-12 người: đặt bàn dài.
             </span>
           </li>
           <li class="bullet-arrow">
-            <span style="font-size: 95%;">Đi nhóm >12 người: gọi trực tiếp Hotline: 0909.009.009
+            <span style="font-size: 95%;color:aqua;">Đi nhóm >12 người: gọi trực tiếp Hotline: 0909.009.009
             </span>
           </li>
         </ul>
@@ -49,23 +51,6 @@
 <div class="col medium-6 small-12 large-6">
   <div class="col-inner" dark>
     <div role="form" class="wpcf7" id="wpcf7-f197-p4-o2" lang="vi" dir="ltr">
-      <!-- <div class="screen-reader-response" role="alert">
-        "Có một hoặc nhiều mục nhập lỗi. Vui lòng kiểm tra và thử lại"
-        <ul>
-          <li>
-            "Mục này là bắt buộc"
-          </li>
-          <li>
-            "Mục này là bắt buộc"
-          </li>
-          <li>
-            "Mục này là bắt buộc"
-          </li>
-          <li>
-            "Mục này là bắt buộc"
-          </li>
-        </ul>
-      </div> -->
       <form action="/wpcf7-f197-p4-o2" method="post" class="wpcf7-form invalid"novalidate="novalidate">
         <div style="display: none;">
           <input type="hidden" name="_wpcf7" value="197">
