--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -36,20 +36,20 @@
           <!-- Checkbox -->
           <div class="form-check mb-3 mb-md-0">
             <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked />
-            <label class="form-check-label" for="loginCheck"> Remember me </label>
+            <label class="form-check-label" for="loginCheck"> RGhi nhớ đăng nhập </label>
           </div>
         </div>
 
         <div class="col-md-6 d-flex justify-content-center">
           <!-- Simple link -->
-          <a href="Password">Forgot password?</a>
+          <a href="Password">Quên mật khẩu?</a>
         </div>
       </div>
       <!-- Submit button -->
-      <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+      <button type="submit" class="btn btn-primary btn-block mb-4">Đăng nhập</button>
       <!-- Register buttons -->
       <div class="text-center">
-        <p>Not a member? <a href="Signin">Register</a></p>
+        <p>Chưa có tài khoản? <a href="Signin">Đăng nhập</a></p>
       </div>
     </form>
   </div>
