--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,28 @@
- <footer id ="footer" class="footer">
-  <div class="container">
+<body>
+  <footer>
+    <div class = "waves">
+      <div class =" wave" id="wave1"></div>
+      <div class =" wave" id="wave2"></div>
+      <div class =" wave" id="wave3"></div>
+      <div class =" wave" id="wave4"></div>
+    </div>
 
-</div>
-
-</footer>
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <ul class="social-icons">
+          <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+          <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+          <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+        </ul>
+        <ul class="footer-links">
+          <li><a href="About">Về chúng tôi</a></li>
+          <li><a href="Contact">Liên hệ</a></li>
+          <li><a href="Menu">Thực đơn</a></li>
+          <li><a href="Signin">Đăng nhập</a></li>
+        </ul>
+        <p class="copyright-text">Copyright &copy; 2023 All Rights Reserved by
+          <a href="Home">Resman</a>.
+             </p>
+      </div>
+  </footer>
+</body>
