--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
       <div class="carousel-item active">
         <img src="assets/images/banner1.gif" alt="First slide"width="100%" height="50%" >
         <div class="carousel-caption d-none d-md-block">
-          <a href="Contact" class="btn btn-danger" style="margin-right:575px ; width: 170px; height: 55 px; text-align: center; color: white;">GO NOW!</a>
+          <a href="Menu" class="btn btn-danger" style="margin-right:575px ; width: 170px; height: 55 px; text-align: center; color: white;">GO NOW!</a>
         </div>
         <div class="carousel-caption d-none d-md-block" style="color:black">
         </div>
@@ -10,4 +10,33 @@
 
       </div>
   </div>
+  <div id="banner" class="carousel-inner" role="listbox" >
+
+  </div>
+  <div style="display: flex; background-color:#FFFFE8; " >
+    <div class="col-md-2" style="text-align: left;" style="margin-right: 100px;">
+      <h3>Về chúng tôi</h3>
+      <p>RESMAN là thương hiệu ra đời tại Thành phố Hồ Chí Minh, Việt Nam và đang trong giai đoạn định hình và phát triển.
+      <br></p>
+    </div>
+  <div class="col-md-2"style="text-align: left;" style="margin-right: 100px;">
+    <div style="flex-grow: 1;">
+    <h3>Nguyên liệu</h3>
+    <p>Resman luôn ưu tiên chọn các nguyên liệu tươi tốt nhất để phục vụ khách hàng.
+    </p>
+  </div>
+  </div>
+  <div class="col-md-2" style="text-align: left;"style="margin-right: 100px;">
+    <h3>Slogan</h3>
+    <p>Với slogan HIGH QUALITY, LOW PRICE Mong muốn của Resman chính là đem lại trãi nghiệm tốt nhất cho khách hàng nhưng trong tầm giá tốt nhất có thể </p>
+  </div>
+   <div class="col-md-2 "style="text-align: left;"style="margin-right: 0px;" >
+    <h3>Liên hệ</h3>
+    <p><i class='bx bxl-facebook-circle' style="size: 30px; margin-left: 5px;">Facebook: Facebook.com/Resman</i>
+    <br><i class='bx bxl-instagram-alt' style="size: 30px; margin-left: 5px;">Instagram: Resman.hf365</i>
+  </p>
+  </div>
+
+  </div>
+
 
