--- a/src/app/components/addmon/addmon.component.html
+++ b/src/app/components/addmon/addmon.component.html
@@ -1,37 +1,36 @@
-<form  (ngSubmit)="getUserFormData(reservation)">
-          <span class="wpcf7-form-control-wrap text-800">
-            <input type="text" id="tenmon" name="tenmon" [(ngModel)]="reservation.tenmon" placeholder="Tên món ăn" required>
-            <span role="alert" class="wpcf7-not-valid-tip">
+<!-- Pills navs -->
 
-            </span>
-          </span>
-          <br>
+<div class="card text-center" style="width: 500px;">
+  <div class="card-body px-5">
+<ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
+</ul>
+<div class="tab-content">
+  <form>
+    <!-- Name input -->
+    <div class="form-outline mb-4">
+      <input type="text" id="Name" class="form-control" placeholder="Tên món ăn" />
 
-          <span class="wpcf7-form-control-wrap tel-364">
-            <input type="text" id="gia" name="gia" [(ngModel)]="reservation.gia" placeholder="Gía tiền" required>
-            <span role="alert" class="wpcf7-not-valid-tip">
+    </div>
 
-            </span>
-          </span>
-          <br>
+    <!-- Username input -->
+    <div class="form-outline mb-4">
+      <input type="text" id="price" class="form-control" placeholder="Giá tiền" />
+    </div>
 
-          <span class="wpcf7-form-control-wrap number-992">
-            <input type="text" id="loai" name="loai" [(ngModel)]="reservation.loai" placeholder="Loại món ăn " required>
-            <span role="alert" class="wpcf7-not-valid-tip">
+    <!-- Email input -->
+    <div class="form-outline mb-4">
+      <input type="email" id="loai" class="form-control" placeholder="Loại món ăn" />
+    </div>
 
-            </span>
-          </span>
-          <br>
+    <!-- Password input -->
+    <div class="form-outline mb-4">
+      <input type="file" id="image" class="form-control" placeholder="Hình ảnh" />
+    </div>
+    <!-- Submit button -->
+    <button type="submit" class="btn btn-primary btn-block mb-3">thêm món ăn </button>
+  </form>
+</div>
+</div>
+</div>
 
-          <span class="wpcf7-form-control-wrap text-800">
-            <input type="text" id="desc" name="desc" [(ngModel)]="reservation.desc" placeholder="Mô tả món ăn" required>
-            <span role="alert" class="wpcf7-not-valid-tip">
-            </span>
-          </span>
-          <br>
-          <br>
-          <input type="submit" value="Thêm món" class="wpcf7-form-control wpcf7-submit">
-          <span class="ajax-loader"></span>
-
-        </form>
-
+<!-- Pills content -->
