--- a/src/app/components/addmon/addmon.component.html
+++ b/src/app/components/addmon/addmon.component.html
@@ -17,17 +17,17 @@
       <input type="text" id="price" class="form-control" placeholder="Giá tiền" />
     </div>
 
-    <!-- Email input -->
+    <!-- input -->
     <div class="form-outline mb-4">
-      <input type="email" id="loai" class="form-control" placeholder="Loại món ăn" />
+      <input type="text" id="loai" class="form-control" placeholder="Loại món ăn" />
     </div>
 
-    <!-- Password input -->
+    <!-- image input -->
     <div class="form-outline mb-4">
       <input type="file" id="image" class="form-control" placeholder="Hình ảnh" />
     </div>
     <!-- Submit button -->
-    <button type="submit" class="btn btn-primary btn-block mb-3">thêm món ăn </button>
+    <button type="submit" class="btn btn-primary btn-block mb-3">Thêm món ăn </button>
   </form>
 </div>
 </div>
