--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,10 +10,8 @@
 
       </div>
   </div>
-  <div id="banner" class="carousel-inner" role="listbox" >
-
-  </div>
-  <div style="display: flex; background-color:#FFFFE8; " >
+  <br>
+  <div style="display: flex; background-color:pink; " >
     <div class="col-md-2" style="text-align: left;" style="margin-right: 100px;">
       <h3>Về chúng tôi</h3>
       <p>RESMAN là thương hiệu ra đời tại Thành phố Hồ Chí Minh, Việt Nam và đang trong giai đoạn định hình và phát triển.
