sua header va giao dien trang chu, thanh toan

--- a/src/app/components/booking/booking.component.css
+++ b/src/app/components/booking/booking.component.css
@@ -15,7 +15,7 @@
 
 .kanban-heading-text {
   font-size: 1.8rem;
-  background-color:thistle;
+  background-color:beige;
   padding: 0.8rem 1.7rem;
   border-radius: 0.5rem;
   margin: 1rem;
@@ -25,6 +25,7 @@
   flex-direction: row;
   justify-content: space-between;
   font-family: sans-serif;
+  margin-bottom: 1%;
 }
 
 .kanban-block {
@@ -36,16 +37,16 @@
 }
 
 #a {
-  background-color: #fec6d1;
+  background-color:bisque;
 }
 
 #b {
-  background-color:#fec6d1;
+  background-color:bisque;
 }
 
 #c {
-  background-color:#fec6d1 ;
+  background-color:bisque ;
 }
 body{
-  background-color:beige;
+  background-color:#fec6d1;
 }
