--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -76,6 +76,12 @@
         <td data-label="total">2000.00</td>
       </tr>
     </table>
-    <a class="btn btn-danger" href="">Xác nhận đặt món</a>
+
+    <div>
+    <input type="text" id="note" class="form-control" placeholder="Ghi chú" />
+  </div>
+    <a class="btn btn-danger" href="Cash">Xác nhận đặt món</a>
   </tbody>
+
+
 </table>
