--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -188,7 +188,9 @@ button span:after {
 .cart-icon{
   background-color: #e3eeff;
 }
-
+.search-icon{
+  margin-right: 1%;
+}
 shopee-svg-icon{
   color:#616161;
 }
