--- a/src/app/components/listing/listing.component.html
+++ b/src/app/components/listing/listing.component.html
@@ -1,7 +1,7 @@
 <table>
   <thead>
     <tr>
-      <th>STT</th>
+      <th style="width: fit-content;">STT</th>
       <th>Tên Món</th>
       <th>Giá</th>
       <th>Phân loại</th>
