--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -16,34 +16,27 @@
 <div class="tab-content">
 <div class="tab-pane fade show active" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
   <form>
-    <!-- Name input -->
-    <div class="form-outline mb-4">
-      <input type="text" id="registerName" class="form-control" />
-      <label class="form-label" for="registerName">Tên</label>
-    </div>
-
     <!-- Username input -->
     <div class="form-outline mb-4">
-      <input type="text" id="registerUsername" class="form-control" />
-      <label class="form-label" for="registerUsername">Tên tài khoản</label>
+      <input type="text" id="registerUsername" class="form-control" placeholder="Tên tài khoản" style="text-align: center;"/>
+      <label class="form-label" for="registerUsername"></label>
     </div>
-
     <!-- Email input -->
     <div class="form-outline mb-4">
-      <input type="email" id="registerEmail" class="form-control" />
-      <label class="form-label" for="registerEmail">Email</label>
+      <input type="email" id="registerEmail" class="form-control" placeholder="Email" style="text-align: center;" />
+      <label class="form-label" for="registerEmail"></label>
     </div>
 
     <!-- Password input -->
     <div class="form-outline mb-4">
-      <input type="password" id="registerPassword" class="form-control" />
-      <label class="form-label" for="registerPassword">Mật khẩu</label>
+      <input type="password" id="registerPassword" class="form-control" placeholder="Mật khẩu" style="text-align: center;" />
+      <label class="form-label" for="registerPassword"></label>
     </div>
 
     <!-- Repeat Password input -->
     <div class="form-outline mb-4">
-      <input type="password" id="registerRepeatPassword" class="form-control" />
-      <label class="form-label" for="registerRepeatPassword">Nhập lại mật khẩu</label>
+      <input type="password" id="registerRepeatPassword" class="form-control" placeholder="Nhập lại mật khẩu" style="text-align: center;" />
+      <label class="form-label" for="registerRepeatPassword"></label>
     </div>
 
     <!-- Checkbox -->
