--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -7,15 +7,15 @@
     <div class="col medium-6 small-12 large-6">
       <div class="col-inner dark">
         <h3 class="alt-font">
-          <span style="font-size: 130%; color: aqua"> Đặt bàn</span>
+          <span style="font-size: 130%; color: black"> Đặt bàn</span>
         </h3>
         <p>
-          <span style="font-size: 95%; color:blue;">
+          <span style="font-size: 95%; color:black; ">
             "Quý khách vui lòng đặt bàn trước để có trải nghiệm thưởng thức ẩm thực tốt nhất tại RESMAN"
           </span>
         </p>
         <p>
-          <span style="color:aqua;font-size: 100%;">
+          <span style="color:black;font-size: 100%;">
             Gợi ý đặt bàn:
           </span>
 
@@ -23,23 +23,23 @@
         <ul>
 
           <li class="bullet-arrow">
-            <span style="font-size: 95%;color:aqua;">Đi 1 người: đặt bàn đơn
+            <span style="font-size: 95%;color:black;">Đi 1 người: đặt bàn đơn
             </span>
           </li>
           <li class="bullet-arrow">
-            <span style="font-size: 95%;color:aqua;">Đi 2 người: đặt bàn đôi
+            <span style="font-size: 95%;color:black;">Đi 2 người: đặt bàn đôi
             </span>
           </li>
           <li class="bullet-arrow">
-            <span style="font-size: 95%;color:aqua;">Đi nhóm 4-6 người: đặt bàn 6 người.
+            <span style="font-size: 95%;color:black;">Đi nhóm 4-6 người: đặt bàn 6 người.
             </span>
           </li>
           <li class="bullet-arrow">
-            <span style="font-size: 95%;color:aqua;">Đi nhóm 6-12 người: đặt bàn dài.
+            <span style="font-size: 95%;color:black;">Đi nhóm 6-12 người: đặt bàn dài.
             </span>
           </li>
           <li class="bullet-arrow">
-            <span style="font-size: 95%;color:aqua;">Đi nhóm >12 người: gọi trực tiếp Hotline: 0909.009.009
+            <span style="font-size: 95%;color:black;">Đi nhóm >12 người: gọi trực tiếp Hotline: 0909.009.009
             </span>
           </li>
         </ul>
@@ -102,7 +102,7 @@
           <span class="wpcf7-form-control-wrap checkbox-441">
             <span class="wpcf7-form-control wpcf7-checkbox wpcf7-validates-as-required wpcf7-exclusive-checkbox">
               <span class="wpcf7-list-item-first">
-                <input type="text" name="text-800" value size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required wpcf7-not-valid" aria-required="true" aria-invalid="true" placeholder="Thời gian đặt giờ...">
+                <input type="text" name="text-800" value size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required wpcf7-not-valid" aria-required="true" aria-invalid="true" placeholder="Thời gian đặt...">
                 <span class="wpcf7-list-item-label">
                 </span>
               </span>
