--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,6 @@
       <link rel="stylesheet" type="text/css" href="./header.component.css">
    </head>
    <body>
-
            <nav class="mb-4 navbar navbar-expand-lg navbar-light pink lighten-4">
             <!-- Navbar brand -->
             <a id="logo" href="Home" class="logo"><img src="./assets/images/logo.jpg" alt=""[style.width]="'60px'" [style.height]="'70px'" style="margin-left: 5px;"></a>
@@ -13,51 +12,26 @@
             <!-- Collapse button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <!-- Collapsible content -->
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <!-- Links -->
+
                 <ul class="navbar-nav mr-auto">
-
-                    <li class="nav-item">
-                        <a class="nav-link font-bold" href="Menu">Thực đơn</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link font-bold" href="Contact">Đặt bàn</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link font-bold" href="Login">Đăng nhập</a>
-                  </li>
                 </ul>
 
-                <button type="button" class="btn btn-solid-primary btn--s btn--inline shopee-searchbar__search-button">
-                  <svg height="19" viewBox="0 0 19 19" width="19" class="shopee-svg-icon">
-                    <g fill-rule="evenodd" stroke="none" stroke-width="1">
-                      <g transform="translate(-1016 -32)">
-                        <g>
-                          <g transform="translate(405 21)">
-                            <g transform="translate(611 11)">
-                              <path d="m8 16c4.418278 0 8-3.581722 8-8s-3.581722-8-8-8-8 3.581722-8 8 3.581722 8 8 8zm0-2c-3.3137085 0-6-2.6862915-6-6s2.6862915-6 6-6 6 2.6862915 6 6-2.6862915 6-6 6z"></path>
-                              <path d="m12.2972351 13.7114222 4.9799555 4.919354c.3929077.3881263 1.0260608.3842503 1.4141871-.0086574.3881263-.3929076.3842503-1.0260607-.0086574-1.414187l-4.9799554-4.919354c-.3929077-.3881263-1.0260608-.3842503-1.4141871.0086573-.3881263.3929077-.3842503 1.0260608.0086573 1.4141871z">
 
-                          </path>
-                            </g>
-                          </g>
-                        </g>
-                      </g>
-                    </g>
-                  </svg>
-                </button>
 
+                <div>
                 <div class="navbar-nav mr-auto">
+
+                  <li class="nav-item">
+                    <a class="nav-link font-bold" href="Login" style="width: 100px;">Đăng nhập</a>
+                </li>
+
                     <div class="col-md-12 text-right">
-                      <div class="cart-icon">
+                      <div class="cart-icon" >
                         <li><a class="cart" href="Cart"><i class="fa fa-shopping-cart"></i></a></li>
                       </div>
                     </div>
                 </div>
-
-
-            </div>
+              </div>
             <!-- Collapsible content -->
         </nav>
     </body>
