--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,14 +20,14 @@
     <form>
       <!-- Email input -->
       <div class="form-outline mb-4">
-        <input type="email" id="loginName" class="form-control" />
-        <label class="form-label" for="loginName">Email hoặc tên đăng nhập</label>
+        <input type="email" id="loginName" class="form-control" placeholder="Email hoặc tên đăng nhập"  style="text-align: center;"/>
+        <label class="form-label" for="loginName"></label>
       </div>
 
       <!-- Password input -->
       <div class="form-outline mb-4">
-        <input type="password" id="loginPassword" class="form-control" />
-        <label class="form-label" for="loginPassword">Mật khẩu</label>
+        <input type="password" id="loginPassword" class="form-control" placeholder="Mật khẩu" style="text-align: center;" />
+        <label class="form-label" for="loginPassword"></label>
       </div>
 
       <!-- 2 column grid layout -->
@@ -36,7 +36,7 @@
           <!-- Checkbox -->
           <div class="form-check mb-3 mb-md-0">
             <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked />
-            <label class="form-check-label" for="loginCheck"> RGhi nhớ đăng nhập </label>
+            <label class="form-check-label" for="loginCheck"> Ghi nhớ đăng nhập </label>
           </div>
         </div>
 
@@ -46,10 +46,10 @@
         </div>
       </div>
       <!-- Submit button -->
-      <button type="submit" class="btn btn-primary btn-block mb-4">Đăng nhập</button>
+      <button type="submit" class="btn btn-primary btn-block mb-4" >Đăng nhập</button>
       <!-- Register buttons -->
       <div class="text-center">
-        <p>Chưa có tài khoản? <a href="Signin">Đăng nhập</a></p>
+        <p>Chưa có tài khoản? <a href="Signin">Đăng ký ngay</a></p>
       </div>
     </form>
   </div>
