--- a/src/app/components/password/password.component.html
+++ b/src/app/components/password/password.component.html
@@ -5,8 +5,8 @@
           Điền email đăng ký tài khoản để nhận mã đăng nhập.
       </p>
       <div class="form-outline">
-          <input type="email" id="typeEmail" class="form-control my-3" />
-          <label class="form-label" for="typeEmail">Email</label>
+          <input type="email" id="typeEmail" class="form-control my-3" placeholder="Email"/>
+          <label class="form-label" for="typeEmail"></label>
       </div>
       <a href="Reset" class="btn btn-primary w-100">Đặt lại mật khẩu</a>
       <div class="d-flex justify-content-between mt-4">
